Fix spacing on block lists

--- a/objects/_block-list.scss
+++ b/objects/_block-list.scss
@@ -29,8 +29,8 @@
   }
   .block-list--sides {
     > li {
-      padding-left: get(spacing) / 2;
-      padding-right: get(spacing) / 2;
+      padding-left: get(spacing);
+      padding-right: get(spacing);
     }
   }
 
